[tool.poetry]
name = "cloud-colorizer"
version = "0.1.0"
description = ""
authors = ["Mikołaj Badyl <contact@hawier.dev>"]
readme = "README.md"
packages = [{include = "cloud_colorizer"}]

[tool.poetry.dependencies]
python = "^3.10"
rasterio = "^1.3.4"
numpy = "^1.23.5"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
